ISP20231140 - Final Inspection Measurement 如果單位是INCH，但代出來的值是小數，則繼續用小數運算

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -746,7 +746,7 @@
         }
         else if (val.toString().indexOf(".") > 0 && val.toString().indexOf(' ') < 0 && val.toString().indexOf('/') < 0) {
             // 小數
-            if (containsInvalidCharacters2(val) || unit == 'INCH') {
+            if (containsInvalidCharacters2(val)) {
                 val = 0;
             }
             vi = val;
@@ -916,7 +916,7 @@
             }
             else if (val.toString().indexOf(".") > 0 && val.toString().indexOf(' ') < 0 && val.toString().indexOf('/') < 0) {
                 // 小數
-                if (containsInvalidCharacters2(val) || unit == 'INCH') {
+                if (containsInvalidCharacters2(val)) {
                     val = 0;
                 }
                 vi = val;
