ISP20231169 - Fabric Crocking & Shrinkage Test首頁表身字體調整+去除多餘code

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
@@ -165,6 +165,9 @@
         font-weight: bold;
         font-size: 1rem;
     }
+    .colBody {
+        font-size: 1rem;
+    }
     .fixedColumn1 {
         position: sticky;
         left: 1px;
@@ -337,220 +340,6 @@
                     </div>
                 </div>
 
-                @*<div style="margin-top: 1em;overflow:auto">
-                        <table class="DataTable DetailTable" style=" border-collapse: separate; ">
-                            <thead>
-                                <tr class="row-name" id="row-name">
-                                    <th class="fixedColumn1">Report No</th>
-                                    <th class="fixedColumn2">Seq</th>
-                                    <th class="fixedColumn3">WKNo</th>
-                                    <th >Arrive W/H Date</th>
-                                    <th >SCI Refno</th>
-                                    <th >Refno</th>
-                                    <th >Color</th>
-                                    <th >Supplier</th>
-                                    <th >Arrive Qty</th>
-                                    <th >Sample Rcv. Date</th>
-                                    <th >Insp. Deadline</th>
-                                    <th >All Result</th>
-                                    <th >
-                                        Crocking N/A<br />
-                                        <input id="selectAllCrocking" type="checkbox" name="name" />
-                                    </th>
-                                    <th >Crocking Result</th>
-                                    <th >Crocking Test Date</th>
-                                    <th >Remark</th>
-                                    <th >
-                                        HT N/A<br />
-                                        <input id="selectAllHT" type="checkbox" name="name" />
-                                    </th>
-                                    <th >Heat Result</th>
-                                    <th >Heat Last Test Date</th>
-                                    <th >Remark</th>
-                                    <th >
-                                        Iron N/A<br />
-                                        <input id="selectAllIron" type="checkbox" name="name" />
-                                    </th>
-                                    <th >Iron Result</th>
-                                    <th >Iron Last Test Date</th>
-                                    <th >Remark</th>
-
-                                    <th >
-                                        Wash N/A<br />
-                                        <input id="selectAllWash" type="checkbox" name="name" />
-                                    </th>
-                                    <th >Wash Result</th>
-                                    <th >Wash Last Test Date</th>
-                                    <th >Remark</th>
-                                    <th >Receiving</th>
-                                    <th >Crocking</th>
-                                    <th >Heat</th>
-                                    <th >Iron</th>
-                                    <th >Wash</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @for (int i = 0; i < Model.Details.Count; i++)
-                                {
-                                    string styleColor = string.Empty;
-                                    <tr class="row-content" style="vertical-align: middle; text-align: center;">
-                                        <td class="fixedColumn1">
-                                            @Html.DisplayFor(modelItem => Model.Details[i].ReportNo)
-                                        </td>
-                                        <td class="fixedColumn2">
-                                            @Html.HiddenFor(modelItem => Model.Details[i].ID)
-                                            @Html.DisplayFor(modelItem => Model.Details[i].Seq)
-                                        </td>
-                                        <td class="fixedColumn3">
-                                            @Html.DisplayFor(modelItem => Model.Details[i].WKNo)
-                                        </td>
-                                        <td>
-                                            @Html.ValueFor(modelItem => Model.Details[i].WhseArrival, "{0:yyyy/MM/dd}")
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => Model.Details[i].SCIRefno)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => Model.Details[i].Refno)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => Model.Details[i].ColorID)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => Model.Details[i].Supplier)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => Model.Details[i].ArriveQty)
-                                        </td>
-                                        <td style="background-color:rgb(255, 228, 225)">
-                                            @Html.TextBoxFor(modelItem => Model.Details[i].ReceiveSampleDate, "{0:yyyy/MM/dd}", new { @class = "date-picker" })
-                                        </td>
-                                        <td>
-                                            @Html.ValueFor(modelItem => Model.Details[i].InspDeadline, "{0:yyyy/MM/dd}")
-                                        </td>
-                                        <td>
-                                            @{
-                                                if (Model.Details[i].AllResult == "Pass")
-                                                {
-                                                    styleColor = "blue";
-                                                }
-                                                else
-                                                {
-                                                    styleColor = "red";
-                                                }
-                                            }
-                                            <font color="@styleColor">@Html.DisplayFor(modelItem => Model.Details[i].AllResult)</font>
-                                        </td>
-                                        <td class="CheckBoxColor">
-                                            @Html.CheckBox("Details[" + i + "].NonCrocking", Convert.ToBoolean(Model.Details[i].NonCrocking), new { @class = "NonCrocking" })
-                                        </td>
-                                        <td class="CrockingColor">
-                                            @{
-                                                if (Model.Details[i].Crocking == "Pass")
-
-                                                {
-                                                    styleColor = "blue";
-                                                }
-                                                else
-                                                {
-                                                    styleColor = "red";
-                                                }
-                                            }
-                                            <font color="@styleColor">@Html.DisplayFor(modelItem => Model.Details[i].Crocking)</font>
-                                        </td>
-                                        <td class="CrockingColor">
-                                            @Html.ValueFor(modelItem => Model.Details[i].CrockingDate, "{0:yyyy/MM/dd}")
-                                        </td>
-                                        <td class="CrockingColor">
-                                            @Html.DisplayFor(modelItem => Model.Details[i].CrockingRemark)
-                                        </td>
-                                        <td class="CheckBoxColor">
-                                            @Html.CheckBox("Details[" + i + "].NonHeat", Convert.ToBoolean(Model.Details[i].NonHeat), new { @class = "NonHeat" })
-                                        </td>
-                                        <td class="HeatColor">
-                                            @{
-                                                if (Model.Details[i].Heat == "Pass")
-
-                                                {
-                                                    styleColor = "blue";
-                                                }
-                                                else
-                                                {
-                                                    styleColor = "red";
-                                                }
-                                            }
-                                            <font color="@styleColor">@Html.DisplayFor(modelItem => Model.Details[i].Heat)</font>
-                                        </td>
-                                        <td class="HeatColor">
-                                            @Html.ValueFor(modelItem => Model.Details[i].HeatDate, "{0:yyyy/MM/dd}")
-                                        </td>
-                                        <td class="HeatColor">
-                                            @Html.DisplayFor(modelItem => Model.Details[i].HeatRemark)
-                                        </td>
-
-                                        <td class="CheckBoxColor">
-                                            @Html.CheckBox("Details[" + i + "].NonIron", Convert.ToBoolean(Model.Details[i].NonIron), new { @class = "NonIron" })
-                                        </td>
-                                        <td class="IronColor">
-                                            @{
-                                                if (Model.Details[i].Iron == "Pass")
-
-                                                {
-                                                    styleColor = "blue";
-                                                }
-                                                else
-                                                {
-                                                    styleColor = "red";
-                                                }
-                                            }
-                                            <font color="@styleColor">@Html.DisplayFor(modelItem => Model.Details[i].Iron)</font>
-                                        </td>
-                                        <td class="IronColor">
-                                            @Html.ValueFor(modelItem => Model.Details[i].IronDate, "{0:yyyy/MM/dd}")
-                                        </td>
-                                        <td class="IronColor">
-                                            @Html.DisplayFor(modelItem => Model.Details[i].IronRemark)
-                                        </td>
-
-                                        <td class="CheckBoxColor">
-                                            @Html.CheckBox("Details[" + i + "].NonWash", Convert.ToBoolean(Model.Details[i].NonWash), new { @class = "NonWash" })
-                                        </td>
-                                        <td class="WashColor">
-                                            @{
-                                                if (Model.Details[i].Wash == "Pass")
-                                                {
-                                                    styleColor = "blue";
-                                                }
-                                                else
-                                                {
-                                                    styleColor = "red";
-                                                }
-                                            }
-                                            <font color="@styleColor">@Html.DisplayFor(modelItem => Model.Details[i].Wash)</font>
-                                        </td>
-                                        <td class="WashColor">
-                                            @Html.ValueFor(modelItem => Model.Details[i].WashDate, "{0:yyyy/MM/dd}")
-                                        </td>
-                                        <td class="WashColor">
-                                            @Html.DisplayFor(modelItem => Model.Details[i].WashRemark)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => Model.Details[i].ReceivingID)
-                                        </td>
-                                        @{
-                                            string controllerName = ViewContext.RouteData.GetRequiredString("Controller");
-                                        }
-
-                                        <td><a class="link" href="@Url.Action("CrockingTest", @controllerName)?ID=@Model.Details[i].ID">CrockingTest</a></td>
-                                        <td><a class="link" href="@Url.Action("HeatTest", @controllerName)?ID=@Model.Details[i].ID">HeatTest</a></td>
-                                        <td><a class="link" href="@Url.Action("IronTest", @controllerName)?ID=@Model.Details[i].ID">IronTest</a></td>
-                                        <td><a class="link" href="@Url.Action("WashTest", @controllerName)?ID=@Model.Details[i].ID">WashTest</a></td>
-                                    </tr>
-                                }
-                            </tbody>
-
-                        </table>
-                    </div>*@
 
                 <div class="bodyDiv" style="overflow:auto;">
 
