ISP20231169 - Wash、Heat自動帶入值調整

--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -777,11 +777,13 @@
             lastNO = 0;
         }
 
+        var brandid = '@Model.Heat_Main.BrandID';
+
         $.ajax({
             url: "@Url.Action("AddHeatDetailRow", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ lastNO: lastNO }),
+            data: JSON.stringify({ lastNO: lastNO, BrandID: brandid }),
             async: false,
             success: function (data) {
                 $('.DetailTable > thead > tr').show();
