--- a/Quality/Quality/Areas/BulkFGT/Views/BrandBulkTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/BrandBulkTest/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model BrandGarmentTest_ViewModel
+@model BrandBulkTest_ViewModel
 <link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
 <link href="~/ThirdParty/plugins/jquery-ui/jquery-ui.css" rel="stylesheet" />
 
@@ -258,11 +258,11 @@
 <div class="main-content">
     <header class="page-header">
         <h3>
-            <i class=""></i><span>Brand Garment Test</span>
+            <i class=""></i><span>Bulk Test By Brand</span>
         </h3>
         <div class="breadcrumb">
             <div>Home</div>
-            <div class="current">Brand Garment Test</div>
+            <div class="current">Bulk Test By Brand</div>
         </div>
     </header>
 
@@ -372,7 +372,7 @@
                                         string rowName = $@"Row{i}";
                                         string resultColor = "blue";
                                         <div class="DetailDataAreaItem1 colBody @rowName">
-                                            @Html.ActionLink(Model.MainList[i].ReportNo, "Detail", new BrandGarmentTest_Request() { ReportNo = Model.MainList[i].ReportNo })
+                                            @Html.ActionLink(Model.MainList[i].ReportNo, "Detail", new BrandBulkTest_Request() { ReportNo = Model.MainList[i].ReportNo })
                                         </div>
                                         <div class="DetailDataAreaItem1 colBody @rowName">
                                             @Html.TextBoxFor(o => Model.MainList[i].BrandID, new { })
@@ -601,7 +601,7 @@
         $("#Request_TestItem").blur(function () {
             var BrandID = $('#Request_BrandID').val();
             $.ajax({
-                url: "@Url.Action("BrandGarmentTestItemList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("BrandBulkTestItemList", "PublicWondow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, TestItem: $(this).val(), ReturnType: "JSON" }),
@@ -657,7 +657,7 @@
                 return;
             }
             var para = "?TargetID=Request_TestItem&BrandID=" + $('#Request_BrandID').val() + "&TestItem=" + $('#Request_TestItem').val();
-            window.open('@Url.Action("BrandGarmentTestItemList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=700');
+            window.open('@Url.Action("BrandBulkTestItemList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=700');
         }
     }
 
@@ -682,8 +682,8 @@
     }
 
 
-    function GetBrandGarmentTestItemList(BrandGarmentTestItemData) {
-        $('#Request_TestItem').val(BrandGarmentTestItemData.TestItem);
+    function GetBrandBulkTestItemList(BrandBulkTestItemData) {
+        $('#Request_TestItem').val(BrandBulkTestItemData.TestItem);
     }
 
     function ClickEventBind() {
@@ -724,27 +724,27 @@
 
         var selectAll = false;
         $("#btnSelectAll").click(function () {
-            $(".chkBrandGarmentTestDox").prop("checked", !selectAll);
+            $(".chkBrandBulkTestDox").prop("checked", !selectAll);
             selectAll = !selectAll;
         });
 
         $("#btnDownload").click(function () {
-            let selectList = $(".chkBrandGarmentTestDox:checked");
-            let brandGarmentTestDoxList = [];
+            let selectList = $(".chkBrandBulkTestDox:checked");
+            let brandBulkTestDoxList = [];
 
             $.each(selectList, function (dox, idx) {
-                var ukey = $(this).attr('BrandGarmentTestDoxUkey');
-                var brandGarmentTestDox = {
+                var ukey = $(this).attr('BrandBulkTestDoxUkey');
+                var brandBulkTestDox = {
                     Ukey: ukey
                 };
-                brandGarmentTestDoxList.push(brandGarmentTestDox);
+                brandBulkTestDoxList.push(brandBulkTestDox);
             });
 
             $.ajax({
                 url: "@Url.Action("Download")",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ brandGarmentTestDoxList: brandGarmentTestDoxList }),
+                data: JSON.stringify({ brandBulkTestDoxList: brandBulkTestDoxList }),
                 async: true,
                 success: function (data) {
                     if (data.Result == true) {
